# mongo-bug-fix

./: Cargo.toml  README.md
fix-core/: Cargo.toml
fix-core/src/: kernel.rs  lib.rs  plugins.rs
fix-integrated/: Cargo.toml
fix-integrated/src/: main.rs
fix-main/: Cargo.toml
fix-main/src/: main.rs
fix-plugin/: Cargo.toml
fix-plugin/src/: lib.rs
