[package]
name = "fix-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = "0.4"
chrono-tz = { version = "0.6", features = ["serde"] }
