[package]
name = "fix-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fix-core = { path = "../fix-core" }
mongodb = "2.3.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = "0.4"
chrono-tz = { version = "0.6", features = ["serde"] }
